2014-08-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* config/open-axiom.m4 (OPENAXIOM_LINK_FILES): New.
	* configure.ac: Call it.
	Protect openaxiom-c-macros.h.in for multiple inclusion.
	Now install it as <open-axiom/config>.

2014-08-16  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* config/open-axiom.m4: Do not waste time checking for standard
	integer types since we are requiring at least C++11.

2014-02-21  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* config/open-axiom.m4 (OPENAXIOM_CANONICAL_SYSTEM): Set derived
	OpenAxiom-specified src and target directory variables too.
	Remove most build directory variables.

2014-02-21  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* config/open-axiom.m4 (OPENAXIOM_CANONICAL_SYSTEM): Set derived
	OpenAxiom-specified build directories too.

2014-02-10  Gabriel Dos Reis  <gdr@integrable-solutions.net>>

	* config/open-axiom.m4: Clean up global variable names.
	* configure.ac: Likewise.

2014-02-03  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* config/open-axiom.m4: Clean up global variable names.
	* config/setup-dep.mk: Likewise.
	* config/var-def.mk: Likewise.
	* configure.ac: Likewise.

2014-02-02  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* config/open-axiom.m4 (OPENAXIOM_CHECK_IO): Prefer mktemp,
	mkdtemp, mkstemp over tempnam.
